--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>official website</title>
+    <style>
+        img:hover {
+            /* width: 300px;  
+
+            transition-delay: 1s; */
+            transform: rotate(360deg);
+            transition-duration: 4s;
+        }
+        img{
+            width: 400px;
+            height: 400px;
+            border: 50%;
+        }
+    </style>
 </head>
 <body>
    <h1>hello</h1>  
